assets/css/hero/hero-text.css
.hero__text {
    font-size: 20px;
    padding-left: 50%;
    padding-right: 20%;
    text-align: justify;
    animation: fadeInAnimationText ease 3s;
    animation-iteration-count: 1;
}
  
@keyframes fadeInAnimationText {
    0% {
        opacity: 0;
    }
    75% {
        opacity: 0;
    }
    100% {
        opacity: 1;
     }
}

@media screen and (max-width: 768px) {
    .hero__text {
        font-size: 16px;
        padding: 0 10%;
    }
}

@media screen and (min-width: 768px) and (max-width: 1150px) {
    .hero__text {
        padding-left: 40%;
        padding-right: 15%;
    }
  }

